<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cal"
                android:text="@string/clear"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnNegPos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cal"
                android:text="@string/negPos"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnRemove"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cal"
                android:text="@string/removeDigit"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnDivision"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/division"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/seven"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/eight"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/nine"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnMultiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/multiplication"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/four"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/five"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/six"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnSubtraction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/subtraction"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/one"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/two"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/three"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/addition"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/zero"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnDecimal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/decimal"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnCalculate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/calculate"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>